<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chats_view_profile"
        android:title="@string/view_profile_txt"
        app:showAsAction="never" />

    <item
        android:id="@+id/chats_mute"
        android:title="@string/mute_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/chats_report"
        android:title="@string/report"
        app:showAsAction="never" />


    <item
        android:id="@+id/chats_block"
        android:title="@string/block"
        app:showAsAction="never" />

    <item
        android:id="@+id/chats_clear"
        android:title="@string/clear_chat"
        app:showAsAction="never" />


</menu>