<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/navigation_trainers"
        android:icon="@drawable/people_icon"
        android:title="@string/trainers"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chat_icon"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account_icon"
        android:title="@string/profile" />

</menu>