<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    tools:context=".users.settings.Account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/black"
        android:dividerPadding="10dp"
        android:orientation="vertical"
        android:showDividers="none">

        <TextView
            android:id="@+id/personal_info_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:padding="20dp"
            android:background="@color/btnpressed"
            android:textSize="18sp"
            android:text="@string/personal_information"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/language_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:padding="20dp"
            android:background="@color/btnpressed"
            android:text="@string/language"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="Chats"
            android:clickable="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/change_email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:padding="20dp"
            android:background="@color/btnpressed"
            android:textSize="18sp"
            android:text="@string/change_email"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/change_phone_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:padding="20dp"
            android:background="@color/btnpressed"
            android:textSize="18sp"
            android:text="@string/change_phone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:padding="20dp"
            android:background="@color/btnpressed"
            android:textSize="18sp"
            android:text="@string/delete_account"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>