<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".users.ui.profile.ProfileInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@color/black"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/full_name"
            android:textColorHint="@color/almostBlck"
            app:boxStrokeErrorColor="@color/error"
            app:hintTextColor="@color/almostBlck"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/edit_icon"
            app:startIconTint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullname_profile_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bio_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/bio"
            android:textColorHint="@color/almostBlck"
            app:boxStrokeErrorColor="@color/error"
            app:hintTextColor="@color/almostBlck"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/edit_icon"
            app:startIconTint="@color/black"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio_profile_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColorHint="@color/orange"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/email_profile_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="getfit@example.com"
            android:background="@drawable/textview_design"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColorHint="@color/orange"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/phone_profile_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+2793829839"
            android:background="@drawable/textview_design"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColorHint="@color/orange"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:clickable="false">

            <RadioButton
                android:id="@+id/male_rb_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:clickable="false"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_rb_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:text="@string/female"
                android:clickable="false"/>

            <RadioButton
                android:id="@+id/other_rb_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:buttonTint="@color/black"
                android:text="@string/other"
                android:clickable="false"/>
        </RadioGroup>

        <Button
            android:id="@+id/save_changes_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:background="@drawable/button_design_two"/>

    </LinearLayout>

</ScrollView>