<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Common.LoginSignUp.ForgotPasswordFragment"
    android:background="@drawable/gradient_fill_one"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password_desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_outline"
        android:hint="@string/current_email_txt"
        android:textColorHint="@color/white"
        android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgot_password_continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_bg_btn"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/forgot_password_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:src="@drawable/back_icon"
        app:tint="@color/black"
        android:background="@color/transparent"
        android:layout_marginTop="15dp"
        android:layout_gravity="start" />

</LinearLayout>